[package]
name = "day1"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
itertools = "0.12.0"
regex = { version = "1.10.2", features = ["pattern"] }
tracing = "0.1.40"
winnow = { version = "0.5.28", features = [] }
